k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: film-tracker-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 34.83.3.73.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: api-service
          servicePort: 80
